update student UI

--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/student-management.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/student-management.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="" />
 		<meta name="author" content="" />
 
-		<title>SB Admin 2 - Tables</title>
+		<title>Hana Taekwondo - Student List</title>
 
 		<!-- Custom fonts for this template -->
 		<link
@@ -31,6 +31,7 @@
 			href="vendor/datatables/dataTables.bootstrap4.min.css"
 			rel="stylesheet"
 		/>
+        <link href="vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
 	</head>
 
 	<body id="page-top">
@@ -55,6 +56,18 @@
 
 						<!-- DataTales Example -->
 						<div class="card shadow mb-4">
+							<div class="card-header py-3">
+								<a
+									id="add-btn"
+									href="#"
+									class="btn btn-primary btn-icon-split"
+								>
+									<span class="icon text-white-50">
+										<i class="fas fa-user-plus"></i>
+									</span>
+									<span class="text">Add New Student</span>
+								</a>
+							</div>
 							<div class="card-body">
 								<div class="table-responsive">
 									<table
@@ -71,7 +84,7 @@
 												<th>Gender</th>
 												<th>Parent</th>
 												<th>Phone Number</th>
-                                                <th></th>
+												<th></th>
 											</tr>
 										</thead>
 									</table>
@@ -110,10 +123,11 @@
 		<script src="vendor/datatables/jquery.dataTables.min.js"></script>
 		<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-        <script src="js/components/sidebar.js"></script>
-        <script src="js/components/topbar.js"></script>
-        <script src="js/components/footer.js"></script>
+        <script src="vendor/toaster/jquery.toast.min.js"></script>
+		<script src="js/components/sidebar.js"></script>
+		<script src="js/components/topbar.js"></script>
+		<script src="js/components/footer.js"></script>
 
-        <script src="js/student-management.js"></script>
+		<script src="js/student-management.js"></script>
 	</body>
 </html>
