--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/login.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/login.html
@@ -24,23 +24,8 @@
 		/>
 
 		<!-- Custom styles for this template-->
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-			integrity="sha256-sAcc18zvMnaJZrNT4v8J0T4HqzEUiUTlVFgDIywjQek="
-			crossorigin="anonymous"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-			integrity="sha256-PDJQdTN7dolQWDASIoBVrjkuOEaI137FI15sqI3Oxu8="
-			crossorigin="anonymous"
-		/>
 		<link href="css/sb-admin-2.min.css" rel="stylesheet" />
-		<link
-			rel="stylesheet"
-			href="vendor/toaster/css/bootstrap-toaster.css"
-		/>
+		<link href="vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
 	</head>
 
 	<body class="bg-gradient-primary">
@@ -96,19 +81,14 @@
 
 		<!-- Bootstrap core JavaScript-->
 		<script src="vendor/jquery/jquery.min.js"></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
-			integrity="sha256-/hGxZHGQ57fXLp+NDusFZsZo/PG21Bp2+hXYV5a6w+g="
-			crossorigin="anonymous"
-		></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 		<!-- Core plugin JavaScript-->
 		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
 		<!-- Custom scripts for all pages-->
 		<script src="js/sb-admin-2.min.js"></script>
-
-		<script src="vendor/toaster/js/bootstrap-toaster.js"></script>
+		<script src="vendor/toaster/jquery.toast.min.js"></script>
 		<script src="js/login.js"></script>
 	</body>
 </html>
