--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/student-list.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/student-list.html
@@ -59,7 +59,7 @@
 							<div class="card-header py-3">
 								<a
 									id="add-btn"
-									href="#"
+									href="./add-student.html"
 									class="btn btn-primary btn-icon-split"
 								>
 									<span class="icon text-white-50">
@@ -128,6 +128,6 @@
 		<script src="js/components/topbar.js"></script>
 		<script src="js/components/footer.js"></script>
 
-		<script src="js/student-management.js"></script>
+		<script src="js/student-list.js"></script>
 	</body>
 </html>
