--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-list.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-list.html
@@ -14,7 +14,7 @@
 
 		<!-- Custom fonts for this template -->
 		<link
-			href="vendor/fontawesome-free/css/all.min.css"
+			href="../../vendor/fontawesome-free/css/all.min.css"
 			rel="stylesheet"
 			type="text/css"
 		/>
@@ -24,14 +24,14 @@
 		/>
 
 		<!-- Custom styles for this template -->
-		<link href="css/sb-admin-2.min.css" rel="stylesheet" />
+		<link href="../../css/sb-admin-2.min.css" rel="stylesheet" />
 
 		<!-- Custom styles for this page -->
 		<link
-			href="vendor/datatables/dataTables.bootstrap4.min.css"
+			href="../../vendor/datatables/dataTables.bootstrap4.min.css"
 			rel="stylesheet"
 		/>
-        <link href="vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
+        <link href="../../vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
 	</head>
 
 	<body id="page-top">
@@ -110,24 +110,24 @@
 		</a>
 
 		<!-- Bootstrap core JavaScript-->
-		<script src="vendor/jquery/jquery.min.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="../../vendor/jquery/jquery.min.js"></script>
+		<script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 		<!-- Core plugin JavaScript-->
-		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+		<script src="../../vendor/jquery-easing/jquery.easing.min.js"></script>
 
 		<!-- Custom scripts for all pages-->
-		<script src="js/sb-admin-2.min.js"></script>
+		<script src="../../js/sb-admin-2.min.js"></script>
 
 		<!-- Page level plugins -->
-		<script src="vendor/datatables/jquery.dataTables.min.js"></script>
-		<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+		<script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
+		<script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-        <script src="vendor/toaster/jquery.toast.min.js"></script>
-		<script src="js/components/sidebar.js"></script>
-		<script src="js/components/topbar.js"></script>
-		<script src="js/components/footer.js"></script>
+        <script src="../../vendor/toaster/jquery.toast.min.js"></script>
+		<script src="../../js/components/sidebar.js"></script>
+		<script src="../../js/components/topbar.js"></script>
+		<script src="../../js/components/footer.js"></script>
 
-		<script src="js/student-list.js"></script>
+		<script src="../../js/student-list.js"></script>
 	</body>
 </html>
