--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/index.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/index.html
@@ -14,7 +14,7 @@
 
 		<!-- Custom fonts for this template-->
 		<link
-			href="vendor/fontawesome-free/css/all.min.css"
+			href="../vendor/fontawesome-free/css/all.min.css"
 			rel="stylesheet"
 			type="text/css"
 		/>
@@ -24,7 +24,7 @@
 		/>
 
 		<!-- Custom styles for this template-->
-		<link href="css/sb-admin-2.min.css" rel="stylesheet" />
+		<link href="../css/sb-admin-2.min.css" rel="stylesheet" />
 	</head>
 
 	<body id="page-top">
@@ -653,26 +653,26 @@
 		</a>
 
 		<!-- Bootstrap core JavaScript-->
-		<script src="vendor/jquery/jquery.min.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="../vendor/jquery/jquery.min.js"></script>
+		<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 		<!-- Core plugin JavaScript-->
-		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+		<script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
 		<!-- Custom scripts for all pages-->
-		<script src="js/sb-admin-2.js"></script>
+		<script src="../js/sb-admin-2.js"></script>
 
 		<!-- Page level plugins -->
-		<script src="vendor/chart.js/Chart.min.js"></script>
+		<script src="../vendor/chart.js/Chart.min.js"></script>
 
 		<!-- Page level custom scripts -->
-		<script src="js/demo/chart-area-demo.js"></script>
-		<script src="js/demo/chart-pie-demo.js"></script>
-		<script src="js/jwt-decode.js"></script>
+		<script src="../js/demo/chart-area-demo.js"></script>
+		<script src="../js/demo/chart-pie-demo.js"></script>
+		<script src="../js/jwt-decode.js"></script>
 
 		<!-- custom element -->
-		<script src="./js/components/sidebar.js"></script>
-		<script src="./js/components/topbar.js"></script>
-		<script src="./js/components/footer.js"></script>
+		<script src="../js/components/sidebar.js"></script>
+		<script src="../js/components/topbar.js"></script>
+		<script src="../js/components/footer.js"></script>
 	</body>
 </html>
