--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/login.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/login.html
@@ -14,7 +14,7 @@
 
 		<!-- Custom fonts for this template-->
 		<link
-			href="vendor/fontawesome-free/css/all.min.css"
+			href="../vendor/fontawesome-free/css/all.min.css"
 			rel="stylesheet"
 			type="text/css"
 		/>
@@ -24,8 +24,8 @@
 		/>
 
 		<!-- Custom styles for this template-->
-		<link href="css/sb-admin-2.min.css" rel="stylesheet" />
-		<link href="vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
+		<link href="../css/sb-admin-2.min.css" rel="stylesheet" />
+		<link href="../vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
 	</head>
 
 	<body class="bg-gradient-primary">
@@ -80,15 +80,15 @@
 		</div>
 
 		<!-- Bootstrap core JavaScript-->
-		<script src="vendor/jquery/jquery.min.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="../vendor/jquery/jquery.min.js"></script>
+		<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 		<!-- Core plugin JavaScript-->
-		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+		<script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
 		<!-- Custom scripts for all pages-->
-		<script src="js/sb-admin-2.min.js"></script>
-		<script src="vendor/toaster/jquery.toast.min.js"></script>
-		<script src="js/login.js"></script>
+		<script src="../js/sb-admin-2.min.js"></script>
+		<script src="../vendor/toaster/jquery.toast.min.js"></script>
+		<script src="../js/login.js"></script>
 	</body>
 </html>
