--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-detail.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-detail.html
@@ -25,7 +25,10 @@
 
 		<!-- Custom styles for this template-->
 		<link href="../../css/sb-admin-2.min.css" rel="stylesheet" />
-		<link href="../../vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
+		<link
+			href="../../vendor/toaster/jquery.toast.min.css"
+			rel="stylesheet"
+		/>
 		<link
 			href="../../vendor/datatables/dataTables.bootstrap4.min.css"
 			rel="stylesheet"
@@ -52,129 +55,199 @@
 						<!-- Page Heading -->
 						<h1 class="h3 mb-4 text-gray-800">Student Details</h1>
 
-						<div class="col-xl-12">
+						<div class="card shadow mb-4">
 							<!-- Account details card-->
-							<div class="card mb-4">
-								<div class="card-header">
-									<h6
-										class="m-0 font-weight-bold text-primary"
-									>
-										Student Information
-									</h6>
-								</div>
-								<div class="card-body">
-									<form>
-										<!-- Form Group -->
-										<div class="mb-3">
+							<div class="card-header">
+								<h6 class="m-0 font-weight-bold text-primary">
+									Student Information
+								</h6>
+							</div>
+							<div class="card-body">
+								<form>
+									<!-- Form Group -->
+									<div class="mb-3">
+										<label
+											class="small mb-1"
+											for="inputStudentName"
+											>Student Name</label
+										>
+										<input
+											class="form-control"
+											id="inputStudentName"
+											type="text"
+											placeholder="Enter student's name..."
+										/>
+									</div>
+									<!-- Form Group -->
+									<div class="mb-3">
+										<label
+											class="small mb-1"
+											for="inputParent"
+											>Parent</label
+										>
+										<input
+											class="form-control"
+											id="inputParent"
+											type="text"
+											placeholder="Enter student's parent name..."
+										/>
+									</div>
+									<!-- Form Row-->
+									<div class="row gx-3 mb-3">
+										<!-- Form Group (phone number)-->
+										<div class="col-md-4">
 											<label
 												class="small mb-1"
-												for="inputStudentName"
-												>Student Name</label
+												for="inputPhone"
+												>Phone number</label
 											>
 											<input
 												class="form-control"
-												id="inputStudentName"
-												type="text"
-												placeholder="Enter student's name..."
+												id="inputPhone"
+												type="tel"
+												placeholder="Enter phone number..."
 											/>
 										</div>
-										<!-- Form Group -->
-										<div class="mb-3">
+										<!-- Form Group (birthday)-->
+										<div class="col-md-4">
 											<label
 												class="small mb-1"
-												for="inputParent"
-												>Parent</label
+												for="inputBirthday"
+												>Birthday</label
 											>
 											<input
 												class="form-control"
-												id="inputParent"
-												type="text"
-												placeholder="Enter student's parent name..."
+												id="inputBirthday"
+												type="date"
+												name="birthday"
+												placeholder="Enter your birthday"
 											/>
 										</div>
-										<!-- Form Row-->
-										<div class="row gx-3 mb-3">
-											<!-- Form Group (phone number)-->
-											<div class="col-md-4">
-												<label
-													class="small mb-1"
-													for="inputPhone"
-													>Phone number</label
+										<div class="col-md-4">
+											<label
+												class="small mb-1"
+												for="inputGender"
+												>Gender</label
+											>
+											<div>
+												<div
+													class="form-check form-check-inline"
 												>
-												<input
-													class="form-control"
-													id="inputPhone"
-													type="tel"
-													placeholder="Enter phone number..."
-												/>
-											</div>
-											<!-- Form Group (birthday)-->
-											<div class="col-md-4">
-												<label
-													class="small mb-1"
-													for="inputBirthday"
-													>Birthday</label
-												>
-												<input
-													class="form-control"
-													id="inputBirthday"
-													type="date"
-													name="birthday"
-													placeholder="Enter your birthday"
-												/>
-											</div>
-											<div class="col-md-4">
-												<label
-													class="small mb-1"
-													for="inputGender"
-													>Gender</label
-												>
-												<div>
-													<div
-														class="form-check form-check-inline"
+													<input
+														class="form-check-input"
+														type="radio"
+														name="inlineRadioOptions"
+														id="inlineRadio1"
+														value="Male"
+													/>
+													<label
+														class="form-check-label"
+														for="inlineRadio1"
+														>Male</label
 													>
-														<input
-															class="form-check-input"
-															type="radio"
-															name="inlineRadioOptions"
-															id="inlineRadio1"
-															value="Male"
-														/>
-														<label
-															class="form-check-label"
-															for="inlineRadio1"
-															>Male</label
-														>
-													</div>
-													<div
-														class="form-check form-check-inline"
+												</div>
+												<div
+													class="form-check form-check-inline"
+												>
+													<input
+														class="form-check-input"
+														type="radio"
+														name="inlineRadioOptions"
+														id="inlineRadio2"
+														value="Female"
+													/>
+													<label
+														class="form-check-label"
+														for="inlineRadio2"
+														>Female</label
 													>
-														<input
-															class="form-check-input"
-															type="radio"
-															name="inlineRadioOptions"
-															id="inlineRadio2"
-															value="Female"
-														/>
-														<label
-															class="form-check-label"
-															for="inlineRadio2"
-															>Female</label
-														>
-													</div>
 												</div>
 											</div>
 										</div>
-										<!-- Save changes button-->
-										<button
-											id="update-btn"
-											class="btn btn-primary"
-											type="button"
-										>
-											Save changes
-										</button>
-									</form>
-								</div>
+									</div>
+									<!-- Save changes button-->
+									<button
+										id="update-btn"
+										class="btn btn-primary"
+										type="button"
+									>
+										Save changes
+									</button>
+								</form>
+							</div>
+						</div>
+
+						<div class="card shadow mb-4">
+							<!-- Account details card-->
+							<div class="card-header">
+								<h6 class="m-0 font-weight-bold text-primary">
+									Schedule
+								</h6>
+							</div>
+							<div class="card-body">
+								<table class="table">
+									<thead>
+										<tr>
+											<th
+												scope="col"
+												style="text-align: center"
+											>
+												#
+											</th>
+											<th
+												scope="col"
+												style="text-align: center"
+											>
+												Monday
+											</th>
+											<th
+												scope="col"
+												style="text-align: center"
+											>
+												Tuesday
+											</th>
+											<th
+												scope="col"
+												style="text-align: center"
+											>
+												Wednesday
+											</th>
+											<th
+												scope="col"
+												style="text-align: center"
+											>
+												Thursday
+											</th>
+											<th
+												scope="col"
+												style="text-align: center"
+											>
+												Friday
+											</th>
+											<th
+												scope="col"
+												style="text-align: center"
+											>
+												Saturday
+											</th>
+											<th
+												scope="col"
+												style="text-align: center"
+											>
+												Sunday
+											</th>
+										</tr>
+									</thead>
+									<tbody id="timetable"></tbody>
+								</table>
+
+								<button
+									id="update-timetable-btn"
+									class="btn btn-primary"
+									type="button"
+								>
+									Save changes
+								</button>
 							</div>
 						</div>
 
@@ -324,7 +397,11 @@
 													class="col-form-label"
 													>Content</label
 												>
-												<textarea class="form-control" id="content-text" required></textarea>
+												<textarea
+													class="form-control"
+													id="content-text"
+													required
+												></textarea>
 											</div>
 											<div class="form-group">
 												<label
@@ -332,7 +409,11 @@
 													class="col-form-label"
 													>Note</label
 												>
-												<textarea class="form-control" id="note-text" required></textarea>
+												<textarea
+													class="form-control"
+													id="note-text"
+													required
+												></textarea>
 											</div>
 										</form>
 									</div>
