--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-list.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-list.html
@@ -51,6 +51,9 @@
 
 					<!-- Begin Page Content -->
 					<div class="container-fluid">
+						<div class="loading-div">
+							<img src="../../img/Rolling-1s-200px.gif" />
+						</div>
 						<!-- Page Heading -->
 						<h1 class="h3 mb-2 text-gray-800">Students List</h1>
 
