--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-detail.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-detail.html
@@ -52,6 +52,9 @@
 
 					<!-- Begin Page Content -->
 					<div class="container-fluid">
+						<div class="loading-div">
+							<img src="../../img/Rolling-1s-200px.gif" />
+						</div>
 						<!-- Page Heading -->
 						<h1 class="h3 mb-4 text-gray-800">Student Details</h1>
 
