--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/class-detail-management.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/class-detail-management.html
@@ -41,13 +41,39 @@
 
 				<!-- Begin Page Content -->
 				<div class="container-fluid">
+					<div class="card shadow mb-4">
+						<div class="card-body">
+							<div class="card-header py-3 class-info-grid">
+								<div class="grid-item">
+									<h1 class="h3 mb-2 text-gray-800">Class Information</h1>
+								</div>
+								<div class="grid-item">
+									<h6 class="text-gray-900">Class Name:</h6>
+									<p id="class-name" class="text-gray-900"></p>
+								</div>
+								<div class="grid-item">
+									<h6 class="text-gray-900">Class Description:</h6>
+									<p id="class-description" class="text-gray-900"></p>
+								</div>
+								<div class="grid-item">
+									<h6 class="text-gray-900">Start Date:</h6>
+									<p id="start-date" class="text-gray-900"></p>
+								</div>
+								<div class="grid-item">
+									<h6 class="text-gray-900">End Date:</h6>
+									<p id="end-date" class="text-gray-900"></p>
+								</div>
+							</div>
+						</div>
+					</div>
 					<!-- Page Heading -->
 					<h1 class="h3 mb-2 text-gray-800">Student List</h1>
 
 					<!-- DataTales Example -->
 					<div class="card shadow mb-4">
 						<div class="card-header py-3">
-							<a id="add-btn" href="#" class="btn btn-primary btn-icon-split" data-toggle="modal" data-target="#exampleModal">
+							<a id="add-btn" href="#" class="btn btn-primary btn-icon-split" data-toggle="modal"
+								data-target="#exampleModal">
 								<span class="icon text-white-50">
 									<i class="fas fa-user-plus"></i>
 								</span>
@@ -72,64 +98,65 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- /.container-fluid -->
 				</div>
-				<!-- /.container-fluid -->
-			</div>
-			<!-- End of Main Content -->
+				<!-- End of Main Content -->
 
-			<!-- Footer -->
-			<footer-component></footer-component>
-			<!-- End of Footer -->
+				<!-- Footer -->
+				<footer-component></footer-component>
+				<!-- End of Footer -->
+			</div>
+			<!-- End of Content Wrapper -->
 		</div>
-		<!-- End of Content Wrapper -->
-	</div>
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-		  <div class="modal-content">
-			<div class="modal-header">
-			  <h5 class="modal-title" id="exampleModalLabel">Add Student</h5>
-			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			  </button>
-			</div>
-			<div class="modal-body">
-				<form>
-                    <div class="form-group">
-                        <label for="student-dropdown">Select Student:</label>
-                        <select class="form-control" id="student-dropdown" multiple>
+		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Add Student</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<form>
+							<div class="form-group">
+								<label for="student-dropdown">Select Student:</label>
+								<select class="form-control" id="student-dropdown" multiple>
 
-                        </select>
-                    </div>
-                </form>
+								</select>
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						<button type="submit" id="add-to-class" class="btn btn-primary">Add to Class</button>
+					</div>
+				</div>
 			</div>
-			<div class="modal-footer">
-			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-			  <button type="submit" id="add-to-class" class="btn btn-primary">Add to Class</button>
-			</div>
-		  </div>
-		</div>	
-	  </div>  
-	<!-- End of Page Wrapper -->
-	<!-- Scroll to Top Button-->
-	<a class="scroll-to-top rounded" href="#page-top">
-		<i class="fas fa-angle-up"></i>
-	</a>
-	<!-- Bootstrap core JavaScript-->
-	<script src="vendor/jquery/jquery.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		</div>
+		<!-- End of Page Wrapper -->
+		<!-- Scroll to Top Button-->
+		<a class="scroll-to-top rounded" href="#page-top">
+			<i class="fas fa-angle-up"></i>
+		</a>
+		<!-- Bootstrap core JavaScript-->
+		<script src="vendor/jquery/jquery.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-	<!-- Core plugin JavaScript-->
-	<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+		<!-- Core plugin JavaScript-->
+		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-	<!-- Custom scripts for all pages-->
-	<script src="js/sb-admin-2.min.js"></script>
-	<script src="vendor/datatables/jquery.dataTables.min.js"></script>
-	<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
-	<script src="vendor/toaster/jquery.toast.min.js"></script>
-	<script src="js/components/sidebar.js"></script>
-	<script src="js/components/topbar.js"></script>
-	<script src="js/components/footer.js"></script>
-	<script src="js/class-detail-management.js"></script>
+		<!-- Custom scripts for all pages-->
+		<script src="js/sb-admin-2.min.js"></script>
+		<script src="vendor/datatables/jquery.dataTables.min.js"></script>
+		<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+		<script src="vendor/toaster/jquery.toast.min.js"></script>
+		<script src="js/components/sidebar.js"></script>
+		<script src="js/components/topbar.js"></script>
+		<script src="js/components/footer.js"></script>
+		<script src="js/class-detail-management.js"></script>
 </body>
 
 </html>
