--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/class-detail-management.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/class-detail-management.html
@@ -11,17 +11,17 @@
 	<title>Hana Taekwondo - Class List</title>
 
 	<!-- Custom fonts for this template -->
-	<link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
+	<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
 	<link
 		href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
 		rel="stylesheet" />
 
 	<!-- Custom styles for this template -->
-	<link href="../../css/sb-admin-2.min.css" rel="stylesheet" />
+	<link href="css/sb-admin-2.min.css" rel="stylesheet" />
 
 	<!-- Custom styles for this page -->
-	<link href="../../vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
-	<link href="../../vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
+	<link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
+	<link href="vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -102,10 +102,11 @@
 					<!-- /.container-fluid -->
 				</div>
 				<!-- End of Main Content -->
+
+				<!-- Footer -->
+				<footer-component></footer-component>
+				<!-- End of Footer -->
 			</div>
-			<!-- Footer -->
-			<footer-component></footer-component>
-			<!-- End of Footer -->
 			<!-- End of Content Wrapper -->
 		</div>
 		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -141,21 +142,21 @@
 			<i class="fas fa-angle-up"></i>
 		</a>
 		<!-- Bootstrap core JavaScript-->
-		<script src="../../vendor/jquery/jquery.min.js"></script>
-		<script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="vendor/jquery/jquery.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 		<!-- Core plugin JavaScript-->
-		<script src="../../vendor/jquery-easing/jquery.easing.min.js"></script>
+		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
 		<!-- Custom scripts for all pages-->
-		<script src="../../js/sb-admin-2.min.js"></script>
-		<script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
-		<script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
-		<script src="../../vendor/toaster/jquery.toast.min.js"></script>
-		<script src="../../js/components/sidebar.js"></script>
-		<script src="../../js/components/topbar.js"></script>
-		<script src="../../js/components/footer.js"></script>
-		<script src="../../js/class-detail-management.js"></script>
+		<script src="js/sb-admin-2.min.js"></script>
+		<script src="vendor/datatables/jquery.dataTables.min.js"></script>
+		<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+		<script src="vendor/toaster/jquery.toast.min.js"></script>
+		<script src="js/components/sidebar.js"></script>
+		<script src="js/components/topbar.js"></script>
+		<script src="js/components/footer.js"></script>
+		<script src="js/class-detail-management.js"></script>
 </body>
 
 </html>
