--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/404.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/404.html
@@ -127,7 +127,7 @@
 
 		<!-- Custom scripts for all pages-->
 		<script src="../js/sb-admin-2.min.js"></script>
-
+		<script src="../../js/jwt-decode.js"></script>
 		<script src="../../vendor/toaster/jquery.toast.min.js"></script>
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
