--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/blank.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/blank.html
@@ -300,7 +300,7 @@
 
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
+    <script src="../../js/jwt-decode.js"></script>
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
     <script src="js/components/sidebar.js"></script>
