--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/class/class-management.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/class/class-management.html
@@ -151,6 +151,7 @@
 		<script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
         <script src="../../vendor/toaster/jquery.toast.min.js"></script>
+        <script src="../../js/jwt-decode.js"></script>
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
