--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-list.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-list.html
@@ -125,7 +125,7 @@
 		<!-- Page level plugins -->
 		<script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
 		<script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
-
+		<script src="../../js/jwt-decode.js"></script>
         <script src="../../vendor/toaster/jquery.toast.min.js"></script>
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
