--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/class/class-detail-management.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/class/class-detail-management.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="" />
 	<meta name="author" content="" />
 
-	<title>Hana Taekwondo - Class List</title>
+	<title>Hana Taekwondo - Class Details</title>
 
 	<!-- Custom fonts for this template -->
 	<link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
