--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/class/class-detail-management.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/class/class-detail-management.html
@@ -158,6 +158,7 @@
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
+		<script src="../../js/constants.js"></script>
 		<script src="../../js/class-detail-management.js"></script>
 </body>
 
