--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/login.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/login.html
@@ -36,7 +36,14 @@
 					<div class="card o-hidden border-0 shadow-lg my-5">
 						<div class="card-body p-0">
 							<!-- Nested Row within Card Body -->
-							<div class="row" style="justify-content: center; align-items: center; height: 50vh;">
+							<div
+								class="row"
+								style="
+									justify-content: center;
+									align-items: center;
+									height: 50vh;
+								"
+							>
 								<div class="col-lg-6">
 									<div class="p-5">
 										<div class="text-center">
@@ -89,6 +96,7 @@
 		<!-- Custom scripts for all pages-->
 		<script src="../js/sb-admin-2.min.js"></script>
 		<script src="../vendor/toaster/jquery.toast.min.js"></script>
+		<script src="../js/constants.js"></script>
 		<script src="../js/login.js"></script>
 	</body>
 </html>
