--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/add-student.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/add-student.html
@@ -298,10 +298,16 @@
 													<th scope="col">#</th>
 													<th scope="col">Monday</th>
 													<th scope="col">Tuesday</th>
-													<th scope="col">Wednesday</th>
-													<th scope="col">Thursday</th>
+													<th scope="col">
+														Wednesday
+													</th>
+													<th scope="col">
+														Thursday
+													</th>
 													<th scope="col">Friday</th>
-													<th scope="col">Saturday</th>
+													<th scope="col">
+														Saturday
+													</th>
 													<th scope="col">Sunday</th>
 												</tr>
 											</thead>
@@ -351,6 +357,7 @@
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
+		<script src="../../js/constants.js"></script>
 
 		<script src="../../js/add-student.js"></script>
 	</body>
