--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-detail.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-detail.html
@@ -469,7 +469,10 @@
 									</div>
 									<div class="modal-body">
 										<form>
-											<input type="hidden" id="tuitionInfoId"/>
+											<input
+												type="hidden"
+												id="tuitionInfoId"
+											/>
 											<div class="form-group">
 												<label
 													for="paid-date-update"
@@ -601,6 +604,7 @@
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
+		<script src="../../js/constants.js"></script>
 		<script src="../../js/student-detail.js"></script>
 	</body>
 </html>
