--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/class/class-management.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/class/class-management.html
@@ -212,6 +212,7 @@
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
+		<script src="../../js/constants.js"></script>
 
 		<script src="../../js/class-management.js"></script>
 	</body>
