--- a/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-list.html
+++ b/Hana_FE/startbootstrap-sb-admin-2-gh-pages/public/student/student-list.html
@@ -31,7 +31,10 @@
 			href="../../vendor/datatables/dataTables.bootstrap4.min.css"
 			rel="stylesheet"
 		/>
-        <link href="../../vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
+		<link
+			href="../../vendor/toaster/jquery.toast.min.css"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body id="page-top">
@@ -127,10 +130,11 @@
 		<script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
 		<script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
 		<script src="../../js/jwt-decode.js"></script>
-        <script src="../../vendor/toaster/jquery.toast.min.js"></script>
+		<script src="../../vendor/toaster/jquery.toast.min.js"></script>
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
+		<script src="../../js/constants.js"></script>
 
 		<script src="../../js/student-list.js"></script>
 	</body>
