--- a/Hana_FE/src/public/index.html
+++ b/Hana_FE/src/public/index.html
@@ -160,7 +160,7 @@
 							<!-- Card Body -->
 							<div class="card-body">
 								<div class="chart-area">
-									<canvas id="myLineChart"></canvas>
+									<canvas id="earningsOverviewChart"></canvas>
 								</div>
 							</div>
 						</div>
@@ -176,7 +176,7 @@
 										<h6
 											class="m-0 font-weight-bold text-primary"
 										>
-											Spending Overview
+											Spendings Overview
 										</h6>
 									</div>
 									<!-- Card Body -->
@@ -206,26 +206,34 @@
 									<!-- Card Body -->
 									<div class="card-body">
 										<div class="chart-pie pt-4 pb-2">
-											<canvas id="myPieChart"></canvas>
+											<canvas
+												id="spendingSourcesChart"
+											></canvas>
 										</div>
 										<div class="mt-4 text-center small">
 											<span class="mr-2">
 												<i
 													class="fas fa-circle text-primary"
 												></i>
-												Direct
+												Electric
 											</span>
 											<span class="mr-2">
 												<i
 													class="fas fa-circle text-success"
 												></i>
-												Social
+												Water
 											</span>
 											<span class="mr-2">
 												<i
 													class="fas fa-circle text-info"
 												></i>
-												Referral
+												Rent
+											</span>
+											<span class="mr-2">
+												<i
+													class="fas fa-circle text-secondary"
+												></i>
+												Another
 											</span>
 										</div>
 									</div>
