--- a/Hana_FE/src/public/index.html
+++ b/Hana_FE/src/public/index.html
@@ -131,14 +131,40 @@
 													Spending (This month)
 												</div>
 												<div
-													class="h5 mb-0 font-weight-bold text-gray-800"
-												>
-													18
-												</div>
+													class="h5 mb-0 font-weight-bold text-gray-800 spending-monthly"
+												></div>
 											</div>
 											<div class="col-auto">
 												<i
 													class="fas fa-comments fa-2x text-gray-300"
+												></i>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-xl-3 col-md-6 mb-4">
+								<div
+									class="card border-left-info shadow h-100 py-2"
+								>
+									<div class="card-body">
+										<div
+											class="row no-gutters align-items-center"
+										>
+											<div class="col mr-2">
+												<div
+													class="text-xs font-weight-bold text-info text-uppercase mb-1"
+												>
+													Spending (This year)
+												</div>
+												<div
+													class="h5 mb-0 font-weight-bold text-gray-800 spending-annual"
+												></div>
+											</div>
+											<div class="col-auto">
+												<i
+													class="fas fa-dollar-sign fa-2x text-gray-300"
 												></i>
 											</div>
 										</div>
@@ -200,7 +226,7 @@
 										<h6
 											class="m-0 font-weight-bold text-primary"
 										>
-											Spending Sources
+											Spending Sources (Monthly)
 										</h6>
 									</div>
 									<!-- Card Body -->
