add upload student img be

--- a/Hana_FE/src/public/student/student-detail.html
+++ b/Hana_FE/src/public/student/student-detail.html
@@ -58,125 +58,176 @@
 						<!-- Page Heading -->
 						<h1 class="h3 mb-4 text-gray-800">Student Details</h1>
 
-						<div class="card shadow mb-4">
-							<!-- Account details card-->
-							<div class="card-header">
-								<h6 class="m-0 font-weight-bold text-primary">
-									Student Information
-								</h6>
+						<div class="row" style="margin-bottom: 24px">
+							<div class="col-xl-4">
+								<!-- Profile picture card-->
+								<div class="card shadow mb-4 mb-xl-0">
+									<div class="card-header">
+										<h6
+											class="m-0 font-weight-bold text-primary"
+										>
+											Profile Picture
+										</h6>
+									</div>
+									<div class="card-body text-center">
+										<!-- Profile picture image-->
+										<img
+											class="img-account-profile rounded-circle mb-2"
+											src="http://bootdey.com/img/Content/avatar/avatar1.png"
+											alt=""
+										/>
+										<!-- Profile picture help block-->
+										<div
+											class="small font-italic text-muted mb-4"
+										></div>
+										<!-- Profile picture upload button-->
+										<button
+											class="btn btn-primary"
+											type="button"
+											style="position: relative"
+										>
+											Upload new image
+											<input
+												id="studentImg"
+												type="file"
+												style="
+													position: absolute;
+													opacity: 0;
+													right: 0;
+													top: 0;
+													left: 0;
+													bottom: 0;
+													cursor: pointer;
+												"
+											/>
+										</button>
+									</div>
+								</div>
 							</div>
-							<div class="card-body">
-								<form>
-									<!-- Form Group -->
-									<div class="mb-3">
-										<label
-											class="small mb-1"
-											for="inputStudentName"
-											>Student Name</label
+							<div class="col-xl-8">
+								<!-- Account details card-->
+								<div class="card shadow mb-4">
+									<div class="card-header">
+										<h6
+											class="m-0 font-weight-bold text-primary"
 										>
-										<input
-											class="form-control"
-											id="inputStudentName"
-											type="text"
-											placeholder="Enter student's name..."
-										/>
+											Student Information
+										</h6>
 									</div>
-									<!-- Form Group -->
-									<div class="mb-3">
-										<label
-											class="small mb-1"
-											for="inputParent"
-											>Parent</label
-										>
-										<input
-											class="form-control"
-											id="inputParent"
-											type="text"
-											placeholder="Enter student's parent name..."
-										/>
-									</div>
-									<!-- Form Row-->
-									<div class="row gx-3 mb-3">
-										<!-- Form Group (phone number)-->
-										<div class="col-md-4">
-											<label
-												class="small mb-1"
-												for="inputPhone"
-												>Phone number</label
-											>
-											<input
-												class="form-control"
-												id="inputPhone"
-												type="tel"
-												placeholder="Enter phone number..."
-											/>
-										</div>
-										<!-- Form Group (birthday)-->
-										<div class="col-md-4">
-											<label
-												class="small mb-1"
-												for="inputBirthday"
-												>Birthday</label
-											>
-											<input
-												class="form-control"
-												id="inputBirthday"
-												type="date"
-												name="birthday"
-												placeholder="Enter your birthday"
-											/>
-										</div>
-										<div class="col-md-4">
-											<label
-												class="small mb-1"
-												for="inputGender"
-												>Gender</label
-											>
-											<div>
-												<div
-													class="form-check form-check-inline"
+									<div class="card-body">
+										<form>
+											<!-- Form Group -->
+											<div class="mb-3">
+												<label
+													class="small mb-1"
+													for="inputStudentName"
+													>Student Name</label
 												>
-													<input
-														class="form-check-input"
-														type="radio"
-														name="inlineRadioOptions"
-														id="inlineRadio1"
-														value="Male"
-													/>
+												<input
+													class="form-control"
+													id="inputStudentName"
+													type="text"
+													placeholder="Enter student's name..."
+												/>
+											</div>
+											<!-- Form Group -->
+											<div class="mb-3">
+												<label
+													class="small mb-1"
+													for="inputParent"
+													>Parent</label
+												>
+												<input
+													class="form-control"
+													id="inputParent"
+													type="text"
+													placeholder="Enter student's parent name..."
+												/>
+											</div>
+											<!-- Form Row-->
+											<div class="row gx-3 mb-3">
+												<!-- Form Group (phone number)-->
+												<div class="col-md-4">
 													<label
-														class="form-check-label"
-														for="inlineRadio1"
-														>Male</label
+														class="small mb-1"
+														for="inputPhone"
+														>Phone number</label
 													>
+													<input
+														class="form-control"
+														id="inputPhone"
+														type="tel"
+														placeholder="Enter phone number..."
+													/>
 												</div>
-												<div
-													class="form-check form-check-inline"
-												>
-													<input
-														class="form-check-input"
-														type="radio"
-														name="inlineRadioOptions"
-														id="inlineRadio2"
-														value="Female"
-													/>
+												<!-- Form Group (birthday)-->
+												<div class="col-md-4">
 													<label
-														class="form-check-label"
-														for="inlineRadio2"
-														>Female</label
+														class="small mb-1"
+														for="inputBirthday"
+														>Birthday</label
 													>
+													<input
+														class="form-control"
+														id="inputBirthday"
+														type="date"
+														name="birthday"
+														placeholder="Enter your birthday"
+													/>
+												</div>
+												<div class="col-md-4">
+													<label
+														class="small mb-1"
+														for="inputGender"
+														>Gender</label
+													>
+													<div>
+														<div
+															class="form-check form-check-inline"
+														>
+															<input
+																class="form-check-input"
+																type="radio"
+																name="inlineRadioOptions"
+																id="inlineRadio1"
+																value="Male"
+															/>
+															<label
+																class="form-check-label"
+																for="inlineRadio1"
+																>Male</label
+															>
+														</div>
+														<div
+															class="form-check form-check-inline"
+														>
+															<input
+																class="form-check-input"
+																type="radio"
+																name="inlineRadioOptions"
+																id="inlineRadio2"
+																value="Female"
+															/>
+															<label
+																class="form-check-label"
+																for="inlineRadio2"
+																>Female</label
+															>
+														</div>
+													</div>
 												</div>
 											</div>
-										</div>
+											<!-- Save changes button-->
+											<button
+												id="update-btn"
+												class="btn btn-primary"
+												type="button"
+											>
+												Save changes
+											</button>
+										</form>
 									</div>
-									<!-- Save changes button-->
-									<button
-										id="update-btn"
-										class="btn btn-primary"
-										type="button"
-									>
-										Save changes
-									</button>
-								</form>
+								</div>
 							</div>
 						</div>
 
