--- a/Hana_FE/src/public/student/student-detail.html
+++ b/Hana_FE/src/public/student/student-detail.html
@@ -74,6 +74,7 @@
 										<img
 											class="img-account-profile rounded-circle mb-2"
 											src="http://bootdey.com/img/Content/avatar/avatar1.png"
+											style="width: 211px; height: 211px"
 											alt=""
 										/>
 										<!-- Profile picture help block-->
