update add student

--- a/Hana_FE/src/public/student/student-detail.html
+++ b/Hana_FE/src/public/student/student-detail.html
@@ -73,7 +73,7 @@
 										<!-- Profile picture image-->
 										<img
 											class="img-account-profile rounded-circle mb-2"
-											src="http://bootdey.com/img/Content/avatar/avatar1.png"
+											src="../../img/defaultavatar.png"
 											style="width: 211px; height: 211px"
 											alt=""
 										/>
@@ -100,6 +100,7 @@
 													bottom: 0;
 													cursor: pointer;
 												"
+												onchange="readImg(this)"
 											/>
 										</button>
 									</div>
