--- a/Hana_FE/src/public/student/student-list.html
+++ b/Hana_FE/src/public/student/student-list.html
@@ -85,6 +85,7 @@
 										<thead>
 											<tr>
 												<th>Id</th>
+												<th>Image</th>
 												<th>Full Name</th>
 												<th>Date of Birth</th>
 												<th>Gender</th>
