--- a/Hana_FE/src/public/index.html
+++ b/Hana_FE/src/public/index.html
@@ -173,24 +173,6 @@
 							</div>
 						</div>
 
-						<!-- Area Chart -->
-						<div class="card shadow mb-4">
-							<!-- Card Header - Dropdown -->
-							<div
-								class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
-							>
-								<h6 class="m-0 font-weight-bold text-primary">
-									Earnings Overview
-								</h6>
-							</div>
-							<!-- Card Body -->
-							<div class="card-body">
-								<div class="chart-area">
-									<canvas id="earningsOverviewChart"></canvas>
-								</div>
-							</div>
-						</div>
-
 						<div class="row">
 							<!-- Area Chart -->
 							<div class="col-xl-8 col-lg-7">
@@ -202,15 +184,13 @@
 										<h6
 											class="m-0 font-weight-bold text-primary"
 										>
-											Spendings Overview
+											Overview
 										</h6>
 									</div>
 									<!-- Card Body -->
 									<div class="card-body">
 										<div class="chart-area">
-											<canvas
-												id="spendingOverviewChart"
-											></canvas>
+											<canvas id="overviewChart"></canvas>
 										</div>
 									</div>
 								</div>
