add spending management

--- a/Hana_FE/src/public/class/class-management.html
+++ b/Hana_FE/src/public/class/class-management.html
@@ -214,6 +214,6 @@
 		<script src="../../js/components/footer.js"></script>
 		<script src="../../js/constants.js"></script>
 
-		<script src="../../js/class-management.js"></script>
+		<script src="../../js/class/class-management.js"></script>
 	</body>
 </html>
