--- a/Hana_FE/src/public/student/add-student.html
+++ b/Hana_FE/src/public/student/add-student.html
@@ -405,6 +405,6 @@
 		<script src="../../js/components/footer.js"></script>
 		<script src="../../js/constants.js"></script>
 
-		<script src="../../js/add-student.js"></script>
+		<script src="../../js/student/add-student.js"></script>
 	</body>
 </html>
