--- a/Hana_FE/src/public/student/student-detail.html
+++ b/Hana_FE/src/public/student/student-detail.html
@@ -650,14 +650,17 @@
 
 		<!-- Custom scripts for all pages-->
 		<script src="../../js/sb-admin-2.min.js"></script>
+		<script src="../../js/jwt-decode.js"></script>
+		<script src="../../js/constants.js"></script>
+
 		<script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
 		<script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
 		<script src="../../vendor/toaster/jquery.toast.min.js"></script>
-		<script src="../../js/jwt-decode.js"></script>
+
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
-		<script src="../../js/constants.js"></script>
-		<script src="../../js/student-detail.js"></script>
+
+		<script src="../../js/student/student-detail.js"></script>
 	</body>
 </html>
