--- a/Hana_FE/src/public/student/student-list.html
+++ b/Hana_FE/src/public/student/student-list.html
@@ -130,13 +130,15 @@
 		<!-- Page level plugins -->
 		<script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
 		<script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
-		<script src="../../js/jwt-decode.js"></script>
 		<script src="../../vendor/toaster/jquery.toast.min.js"></script>
+
+		<script src="../../js/jwt-decode.js"></script>
+		<script src="../../js/constants.js"></script>
+
 		<script src="../../js/components/sidebar.js"></script>
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
-		<script src="../../js/constants.js"></script>
 
-		<script src="../../js/student-list.js"></script>
+		<script src="../../js/student/student-list.js"></script>
 	</body>
 </html>
